--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    아무말대잔치국수면빨지리네
+    <br>아무말대잔치국수면빨지리네</br>
     <script src="script.js"></script>
   </body>
 </html>
