--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-	<div>Teachable Machine Image Model</div>
 	<button type="button" onclick="init()">Start</button>
 
 	<script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -19,7 +18,7 @@
   <div class="image-upload-wrap">
     <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
     <div class="drag-text">
-      <h3>Drag and drop a file or select add Image</h3>
+      <h3>사진을 끌어다 놓거나 파일 선택을 누르세요</h3>
     </div>
   </div>
   <div class="file-upload-content">
